--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,11 @@
 
 <h1>Hello World</h1>
 
-<p> <%= homeStartingContent %> </p>
+<% posts.forEach((post) => {%>
+    <div class="jumbotron">
+        <h2><%= post.title %></h2>
+        <p class="lead"><%= post.content.substring(0, 100) %>... <a href="/posts/<%=post.title%>">Read more</a></p>
+    </div>
+<% }); %>
 
 <%- include('partials/footer') -%>
