--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,12 @@
 <%- include('partials/header') -%>
 
-<h1>Hello World</h1>
+<h1>Welcome To Blog.</h1>
 
 <% posts.forEach((post) => {%>
     <div class="jumbotron">
         <h2><%= post.title %></h2>
-        <p class="lead"><%= post.content.substring(0, 100) %>... <a href="/posts/<%=post.title%>">Read more</a></p>
+        <p class="lead"><%= post.content.substring(0, 90) %>... <a href="/posts/<%=post._id%>">Read more</a></p>
     </div>
 <% }); %>
 
-<%- include('partials/footer') -%>
+<%- include('partials/footer') -%> 
